--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 django-environ = "*"
 django-celery-email = "*"
 django-extensions = "*"
+"psycopg2" = "*"
 
 [dev-packages]
 ipdb = "*"
