using whitenoise for django static file on heroku

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-extensions = "*"
 gunicorn = "*"
 djangorestframework = "*"
 django-rest-swagger = "*"
+whitenoise = "*"
 
 [dev-packages]
 ipdb = "*"
