--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ gunicorn = "*"
 djangorestframework = "*"
 django-rest-swagger = "*"
 whitenoise = "*"
+django-allauth = "*"
 
 [dev-packages]
 ipdb = "*"
