--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,10 @@
-image: "inspectorio/python:2.7"
+image: "inspectorio/python:3.6"
 
 variables:
+  KUBERNETES_VERSION: 1.8.6
+  HELM_VERSION: 2.8.2
+  CODECLIMATE_VERSION: 0.71.1
+
   PIP_NO_CACHE_DIR: "false"
   PIP_CACHE_DIR: "${CI_PROJECT_DIR}/cache/pip"
   WORKON_HOME: "${CI_PROJECT_DIR}/cache/pipenv"
@@ -17,26 +21,9 @@ stages:
 
 test:
   stage: test
-  services:
-    - name: postgres:9.6
-      alias: postgres
-  variables:
-    REDIS_URI: "redis://redis:6379/0"
-    DYNAMODB_URI: "http://dynamodb:8000"
-    DB_USER: test
-    DB_PASSWORD: test
-    DB_NAME: sms_test
-    DB_MASTER: test
-    POSTGRES_USER: test
-    POSTGRES_PASSWORD: test
-    POSTGRES_DB: test
-    DB_PORT: 5432
-    DB_HOST: postgres
-    REDIS_URI: "redis://redis:6379/0"
   script:
     - pipenv install --ignore-pipfile --dev
     - pipenv run flake8
-
   coverage: '/TOTAL.+ ([0-9]{1,3}%)/'
   only:
     - master
@@ -146,7 +133,7 @@ deploy-production:
     - prod
 
 .devops: &devops |
-  # Inspectorio GitLab pipeline shared libs
+  # Inspectorio DevOps variables and functions
   [[ "$TRACE" ]] && set -x
   which curl || ( apt-get update -qq -y && apt-get install -qq -y curl ) || ( apk add --no-cache curl )
   # only bash support 'process substitution'
