--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ djangorestframework = "*"
 django-rest-swagger = "*"
 whitenoise = "*"
 django-allauth = "*"
+"flake8" = "*"
 
 [dev-packages]
 ipdb = "*"
