fix uwsgi path wrong

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -4,7 +4,7 @@ procname = $(SERVICE)
 uid = $(APP_USER)
 gid = $(APP_GRP)
 chdir = $(APP_HOME)
-wsgi-file = version_dashboard.wsgi.py
+wsgi-file = version_dashboard/wsgi.py
 callable = application
 
 # Use unix socket
