remove service prefix from nginx

--- a/config/nginx/conf.d/www.conf
+++ b/config/nginx/conf.d/www.conf
@@ -9,14 +9,14 @@ server {
         access_log off;
     }
 
-    location = /${SERVICE}/version.txt {
+    location = /version.txt {
         root /src;
         rewrite /${SERVICE}/(.+) /$1 break;
         add_header Content-Type text/plain;
     }
 
-    location /${SERVICE} {
-    	rewrite /${SERVICE}/(.+) /$1 break;
+    location / {
+    	rewrite /(.+) /$1 break;
         include uwsgi_params;
         uwsgi_pass unix:${APP_HOME}/uwsgi.sock;
         client_max_body_size 100m;
