--- a/config/nginx/conf.d/www.conf
+++ b/config/nginx/conf.d/www.conf
@@ -15,8 +15,8 @@ server {
         add_header Content-Type text/plain;
     }
 
-    location / {
-    	rewrite /(.+) /$1 break;
+    location ~* / {
+        rewrite /${SERVICE}/(.+) /$1 break;
         include uwsgi_params;
         uwsgi_pass unix:${APP_HOME}/uwsgi.sock;
         client_max_body_size 100m;
